--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,16 @@
     <string name="error_invalid_email">Please enter valid email address</string>
     <string name="error_invalid_git_profile">Please enter valid git profile</string>
     <string name="error_invalid_idea_resource_link">Please enter valid resource link</string>
+    <string name="label_submit_idea">Submit Your Idea</string>
+    <string name="label_make_my_card">Make My Card</string>
+    <string name="label_address">Address</string>
+    <string name="label_email">Email</string>
+    <string name="hint_address">Address</string>
+    <string name="error_msg_empty_address">Please enter your address</string>
+    <string name="error_msg_empty_contact">Please enter your contact number</string>
+    <string name="error_empty_img">Please select picture that describes you best</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_invalid_contact">Please enter valid contact number</string>
 </resources>
